--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
 <body>
 
 
+    <footer class="py-5">
+        <div class="row">
+            <p class="text-center">Nous acceptons les moyens de paiement suivants</p>
+
+        
+            <div class="" style="display: flex; flex-wrap: wrap; justify-content: center;">
+                <div class=""><img src="img/modep.jpg" width="100" height="50" alt="mode paiement"></div>
+                <div class=""><img src="img/omoney.jpg" width="100" height="50" alt="orange money"></div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 col-md-3 py-4"><a href="#">Politiques de cookies</a></div>
+                <div class="col-sm-12 col-md-3 py-4"><a href="#">Mentions légales</a></div>
+                <div class="col-sm-12 col-md-3 py-4"><a href="#">Politique de confidentialités</a></div>
+                <div class="col-sm-12 col-md-3 py-4">&copy Copyright damkoguinea.com – Tous droits réservés. Par DAMKO</div>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
