--- a/index.html
+++ b/index.html
@@ -11,9 +11,53 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="style/style.css" />
     <title>Document</title>
   </head>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <img src="/icons/portfolio.png" alt="#" />
+      <a class="navbar-brand" href="#">Portfolio dévellopeur junior</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <button>
+              <a class="nav-link active" aria-current="page" href="#"
+                >à Propos de moi
+              </a>
+            </button>
+          </li>
+          <li class="nav-item">
+            <button>
+              <a class="nav-link" href="#">mes réalisations</a>
+            </button>
+          </li>
+          <li class="nav-item">
+            <button>
+              <a class="nav-link" href="#">mes tarifs</a>
+            </button>
+          </li>
+          <li class="nav-item">
+            <button>
+              <a class="nav-link" href="#">contact</a>
+            </button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <body>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
